# bevy-snake

./: Cargo.toml  bevsnake.js
.github/workflows/: release.yaml
src/: main.rs
wasm/: index.html
